--- a/src/mainboard/google/snow/Kconfig
+++ b/src/mainboard/google/snow/Kconfig
@@ -31,6 +31,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 #	select MMCONF_SUPPORT
 	select EXYNOS_DISPLAYPORT
 	select CHROMEOS
+	select DRIVER_TI_TPS65090
 
 config MAINBOARD_DIR
 	string
