--- a/src/ec/google/chromeec/Kconfig
+++ b/src/ec/google/chromeec/Kconfig
@@ -2,3 +2,10 @@ config EC_GOOGLE_CHROMEEC
 	bool
 	help
 	  Google's Chrome EC
+
+config EC_GOOGLE_CHROMEEC_LPC
+        depends on EC_GOOGLE_CHROMEEC
+	bool
+	default y if ARCH_X86
+	help
+	  Google Chrome EC via LPC bus.
