--- a/src/mainboard/google/snow/Makefile.inc
+++ b/src/mainboard/google/snow/Makefile.inc
@@ -17,9 +17,12 @@
 ## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 ##
 
+bootblock-y += wakeup.c
+
 romstage-y += mainboard.c
 romstage-y += memory.c
 romstage-y += romstage.c
+romstage-y += wakeup.c
 
 # ramstage-y += ec.c
 ramstage-y += ramstage.c
