--- a/src/mainboard/google/Kconfig
+++ b/src/mainboard/google/Kconfig
@@ -26,6 +26,8 @@ config VENDOR_SPECIFIC_OPTIONS
 choice
 	prompt "Mainboard model"
 
+config BOARD_GOOGLE_BELTINO
+	bool "Beltino"
 config BOARD_GOOGLE_BOLT
 	bool "Bolt"
 config BOARD_GOOGLE_BUTTERFLY
@@ -51,6 +53,7 @@ config BOARD_GOOGLE_STOUT
 
 endchoice
 
+source "src/mainboard/google/beltino/Kconfig"
 source "src/mainboard/google/bolt/Kconfig"
 source "src/mainboard/google/butterfly/Kconfig"
 source "src/mainboard/google/falco/Kconfig"
