--- a/src/mainboard/google/kirby/Kconfig
+++ b/src/mainboard/google/kirby/Kconfig
@@ -43,9 +43,8 @@ config MAINBOARD_PART_NUMBER
 
 config DRAM_SIZE_MB
 	int
-	# FIXME(dhendrix): This should be 4096, but due to DRAM
-	# issues it seems only <2GB is stable.
-	default 2048
+	# 4096MB minus 512MB due to address space limitation
+	default 3584
 
 config EC_GOOGLE_CHROMEEC_SPI_BUS
 	hex
