--- a/src/drivers/i2c/Makefile.inc
+++ b/src/drivers/i2c/Makefile.inc
@@ -5,5 +5,6 @@ subdirs-y += i2cmux
 subdirs-y += i2cmux2
 subdirs-y += lm63
 subdirs-y += rtd2132
+subdirs-y += tpm
 subdirs-y += w83795
 subdirs-y += w83793
