bayleybay: add initial Bayley Bay board support
The Bayley Bay reference board is a Bay Trail mobile and/or
desktop reference board.

BUG=chrome-os-partner:22292
BRANCH=None
TEST=Built and booted to romstage.

Change-Id: Ia0a4f94244ce7ac3a960de796170c091e384f976
Signed-off-by: Aaron Durbin <adurbin@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/168388
Reviewed-by: Duncan Laurie <dlaurie@chromium.org>

--- a/src/mainboard/intel/Kconfig
+++ b/src/mainboard/intel/Kconfig
@@ -23,6 +23,8 @@ config BOARD_INTEL_BASKING_RIDGE
 	bool "Basking Ridge CRB"
 config BOARD_INTEL_WTM2
 	bool "Whitetip Mountain 2 CRB"
+config BOARD_INTEL_BAYLEYBAY
+	bool "Bayley Bay CRB"
 
 endchoice
 
@@ -36,6 +38,7 @@ source "src/mainboard/intel/mtarvon/Kconfig"
 source "src/mainboard/intel/truxton/Kconfig"
 source "src/mainboard/intel/xe7501devkit/Kconfig"
 source "src/mainboard/intel/wtm2/Kconfig"
+source "src/mainboard/intel/bayleybay/Kconfig"
 
 config MAINBOARD_VENDOR
 	string
