--- a/src/mainboard/emulation/qemu-armv7/Kconfig
+++ b/src/mainboard/emulation/qemu-armv7/Kconfig
@@ -35,7 +35,7 @@ config MAINBOARD_DIR
 
 config MAINBOARD_PART_NUMBER
 	string
-	default "QEMU ARMV7"
+	default "QEMU ARMv7"
 
 config MAX_CPUS
 	int
@@ -44,6 +44,10 @@ config MAX_CPUS
 config MAINBOARD_VENDOR
 	string
 	default "ARM Ltd."
+
+config SYS_SDRAM_BASE
+	hex "SDRAM base address"
+	default 0x01000000
 
 config DRAM_SIZE_MB
 	int
@@ -64,17 +68,13 @@ config BOOTBLOCK_BASE
 	hex
 	default 0x00010000
 
-config ID_SECTION_BASE
-	hex
-	default 0x0001f000
-
 config ROMSTAGE_BASE
 	hex
 	default 0x00020000
 
-config ROMSTAGE_SIZE
+config RAMSTAGE_BASE
 	hex
-	default 0x20000
+	default SYS_SDRAM_BASE
 
 config CBFS_HEADER_ROM_OFFSET
 	hex
@@ -83,26 +83,5 @@ config CBFS_HEADER_ROM_OFFSET
 config CBFS_ROM_OFFSET
 	hex
 	default 0x0110000
-
-config IRAM_STACK
-	hex
-	default 0x0007ff00
-
-config XIP_ROM_SIZE
-	hex
-	default ROMSTAGE_SIZE
-
-config SYS_SDRAM_BASE
-	hex "SDRAM base address"
-	default 0x01000000
-
-config RAMBASE
-	hex
-	default SYS_SDRAM_BASE
-
-# according to stefan, this is RAMBASE + 1M.
-config RAMTOP
-	hex
-	default 0x01100000
 
 endif #  BOARD_EMULATION_QEMU_ARMV7
