ARMv7: get rmodule support to compile
BRANCH=none
BUG=none
TEST=emerge-peach_pit chromeos-coreboot-peach_pit compiles
     successfully when CONFIG_VBOOT_VERIFY_FIRMWARE=y

Signed-off-by: Stefan Reinauer <reinauer@google.com>
Change-Id: I4a8f26d2e6ba92e4145022512d67e8a469fbba2f
Reviewed-on: https://chromium-review.googlesource.com/169372
Reviewed-by: David Hendrix <dhendrix@chromium.org>

--- a/src/arch/armv7/Makefile.inc
+++ b/src/arch/armv7/Makefile.inc
@@ -170,15 +170,24 @@ bootblock-y += eabi_compat.c
 ramstage-y += boot.c
 ramstage-y += tables.c
 
-romstage-y += memset.S
-ramstage-y += memset.S
 bootblock-y += memset.S
-romstage-y += memcpy.S
-ramstage-y += memcpy.S
 bootblock-y += memcpy.S
-romstage-y += memmove.S
-ramstage-y += memmove.S
 bootblock-y += memmove.S
+
+romstage-y += memset.S
+romstage-y += memcpy.S
+romstage-y += memmove.S
+
+ramstage-y += memset.S
+ramstage-y += memcpy.S
+ramstage-y += memmove.S
+
+rmodules-y += memset.S
+rmodules-y += memcpy.S
+rmodules-y += memmove.S
+rmodules-y += eabi_compat.c
+
+VBOOT_STUB_DEPS += $(obj)/arch/armv7/eabi_compat.rmodules.o
 
 romstage-$(CONFIG_COLLECT_TIMESTAMPS) += timestamp.c
 ramstage-$(CONFIG_COLLECT_TIMESTAMPS) += timestamp.c
