--- a/src/mainboard/google/Kconfig
+++ b/src/mainboard/google/Kconfig
@@ -38,6 +38,8 @@ config BOARD_GOOGLE_KIRBY
 	bool "Kirby"
 config BOARD_GOOGLE_LINK
 	bool "Link"
+config BOARD_GOOGLE_NYAN
+	bool "Nyan"
 config BOARD_GOOGLE_PARROT
 	bool "Parrot"
 config BOARD_GOOGLE_PEPPY
@@ -59,6 +61,7 @@ source "src/mainboard/google/butterfly/Kconfig"
 source "src/mainboard/google/falco/Kconfig"
 source "src/mainboard/google/kirby/Kconfig"
 source "src/mainboard/google/link/Kconfig"
+source "src/mainboard/google/nyan/Kconfig"
 source "src/mainboard/google/parrot/Kconfig"
 source "src/mainboard/google/peppy/Kconfig"
 source "src/mainboard/google/pit/Kconfig"
