--- a/src/cpu/samsung/exynos5420/Kconfig
+++ b/src/cpu/samsung/exynos5420/Kconfig
@@ -1,5 +1,6 @@
 config CPU_SAMSUNG_EXYNOS5420
 	depends on ARCH_ARMV7
+	select CPU_HAS_BOOTBLOCK_INIT
 	select HAVE_MONOTONIC_TIMER
 	select HAVE_UART_SPECIAL
 	select EARLY_CONSOLE
@@ -10,14 +11,6 @@ config CPU_SAMSUNG_EXYNOS5420
 	default n
 
 if CPU_SAMSUNG_EXYNOS5420
-
-config BOOTBLOCK_CPU_INIT
-	string
-	default "cpu/samsung/exynos5420/bootblock.c"
-	help
-	  CPU/SoC-specific bootblock code. This is useful if the
-	  bootblock must load microcode or copy data from ROM before
-	  searching for the bootblock.
 
 # ROM image layout.
 #
