tegra124: Override the -march flag used by the bootblock.
The bootblock on the tegra124 runs on the AVP which is uses the armv4t
architecture version.

BUG=None
TEST=With this option set, saw that the compiler no longer emitted
instructions which don't work on the AVP.
BRANCH=None

Change-Id: Ic9c8b34a353e291a02a714d18de0d01f1e3ab4d1
Signed-off-by: Gabe Black <gabeblack@google.com>
Reviewed-on: https://chromium-review.googlesource.com/170996
Reviewed-by: Gabe Black <gabeblack@chromium.org>
Tested-by: Gabe Black <gabeblack@chromium.org>
Commit-Queue: Gabe Black <gabeblack@chromium.org>

--- a/src/soc/nvidia/tegra124/Makefile.inc
+++ b/src/soc/nvidia/tegra124/Makefile.inc
@@ -1,7 +1,7 @@
 CBOOTIMAGE = cbootimage
 
-bootblock-c-ccopts += -marm
-bootblock-S-ccopts += -marm
+bootblock-c-ccopts += -marm -march=armv4t
+bootblock-S-ccopts += -marm -march=armv4t
 
 bootblock-y += bootblock.c
 bootblock-y += bootblock_asm.S
