--- a/src/soc/samsung/exynos5250/Kconfig
+++ b/src/soc/samsung/exynos5250/Kconfig
@@ -6,6 +6,9 @@ config CPU_SAMSUNG_EXYNOS5250
 	select EARLY_CONSOLE
 	select DYNAMIC_CBMEM
 	select CAR_MIGRATION
+	select ARM_BOOTBLOCK_ARMV7
+	select ARM_ROMSTAGE_ARMV7
+	select ARM_RAMSTAGE_ARMV7
 	bool
 	default n
 
